--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 <li><i class="fas fa-check"></i> Potencial de crescimento</li>
                             </ul>
                         </div>
-                        <button class="test-button">
+                        <button class="test-button" onclick="window.location.replace('./empreendedor.html')">
                             <span>Iniciar Teste</span>
                             <i class="fas fa-arrow-right"></i>
                         </button>
