atualização: acesso às pastas para estilização e redirecionamento

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testes de Personalidade - Empreendedorismo</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -80,7 +80,7 @@
                                 <li><i class="fas fa-check"></i> Potencial de crescimento</li>
                             </ul>
                         </div>
-                        <button class="test-button" onclick="window.location.replace('./empreendedor.html')">
+                        <button class="test-button" onclick="window.location.replace('./pages/empreendedor.html')">
                             <span>Iniciar Teste</span>
                             <i class="fas fa-arrow-right"></i>
                         </button>
