--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 <li><i class="fas fa-check"></i> Experiências práticas</li>
                             </ul>
                         </div>
-                        <button class="test-button">
+                        <button class="test-button" onclick="window.location.href = 'autoavaliacaoCAES.html';">
                             <span>Iniciar Teste</span>
                             <i class="fas fa-arrow-right"></i>
                         </button>
