--- a/pages/empreendedor.html
+++ b/pages/empreendedor.html
@@ -18,6 +18,33 @@
     </div>
 
     <main>
+        <header class="header">
+            <nav class="navbar">
+                <div class="nav-container">
+                    <div class="nav-logo">
+                        <h2>Testes de Personalidade</h2>
+                    </div>
+                    <ul class="nav-menu">
+                        <li class="nav-item">
+                            <a href="../index.html" class="nav-link">Início</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="autoavaliacaoCAES.html" class="nav-link">Autoavaliação CAES</a>
+                            
+                        </li>
+                        <li class="nav-item selecionado">
+                            Perfil Empreendedor
+                        </li>
+                    </ul>
+                    <div class="hamburger">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </div>
+                </div>
+            </nav>
+        </header>
+
         <section id="home" class="hero">
             <div class="hero-container">
                 <div class="hero-content">
