--- a/index.html
+++ b/index.html
@@ -18,6 +18,32 @@
     </div>
 
     <main>
+        <header class="header">
+            <nav class="navbar">
+                <div class="nav-container">
+                    <div class="nav-logo">
+                        <h2>Testes de Personalidade</h2>
+                    </div>
+                    <ul class="nav-menu">
+                        <li class="nav-item selecionado">
+                            Início
+                        </li>
+                        <li class="nav-item">
+                            <a href="../pages/autoavaliacaoCAES.html" class="nav-link">Autoavaliação CAES</a>
+                        </li>
+                    <li class="nav-item">
+                        <a href="../pages/empreendedor.html" class="nav-link">Perfil Empreendedor</a>
+                    </li>
+                    </ul>
+                    <div class="hamburger">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </div>
+                </div>
+            </nav>
+        </header>
+
         <section id="home" class="hero">
             <div class="hero-container">
                 <div class="hero-content">
@@ -61,7 +87,7 @@
                                 <li><i class="fas fa-check"></i> Experiências práticas</li>
                             </ul>
                         </div>
-                        <button class="test-button" onclick="window.location.href = 'autoavaliacaoCAES.html';">
+                        <button class="test-button" onclick="window.location.replace('./pages/autoavaliacaoCAES.html')">
                             <span>Iniciar Teste</span>
                             <i class="fas fa-arrow-right"></i>
                         </button>
