--- a/pages/autoavaliacaoCAES.html
+++ b/pages/autoavaliacaoCAES.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste - Autoavaliação CAES</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
     <div class="background-animation">
@@ -23,13 +23,13 @@
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link">Início</a>
+                        <a href="../index.html" class="nav-link">Início</a>
                     </li>
                     <li class="nav-item selecionado">
                         Autoavaliação CAES
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link">Perfil Empreendedor</a>
+                        <a href="empreendedor.html" class="nav-link">Perfil Empreendedor</a>
                     </li>
                 </ul>
                 <div class="hamburger">
