--- a/pages/empreendedor.html
+++ b/pages/empreendedor.html
@@ -52,7 +52,7 @@
                     <div class="questions" name="perguntas">
                         <div class="question" name="pergunta01">
                             <h3>1. Diante de uma ordem passada por seu chefe, patrão ou superior, qual a sua reação mais provável?</h3>
-                            <form class="forms">
+                            <form id='form1' class="forms">
                                 <input type="radio" name='alternativa' id="a" value=1>
                                 <label for="a">a. Aceita a ordem sem questioná-la.</label><br>
                                 <input type="radio" name='alternativa' id="b" value=3>
@@ -64,7 +64,7 @@
 
                         <div class="question" name="pergunta02">
                             <h3>2. Se, no trabalho ou em uma reunião social, surge uma atividade para o seu grupo fazer, qual a sua atitude mais comum?</h3>
-                            <form class="forms">
+                            <form id='form2' class="forms">
                                 <input type="radio" name='alternativa' id="a" value=1>
                                 <label for="a">a. Espera que o grupo se organize para ver a tarefa que lhe caberá realizar</label><br>
                                 <input type="radio" name='alternativa' id="b" value=5>
@@ -76,7 +76,7 @@
 
                         <div class="question" name="pergunta03">
                             <h3>3. 0 fato de ter que chegar na hora certa ao trabalho, de ter um momento determinado para almoçar e retomar ao emprego e de, ao final do expediente, ter uma hora marcada para deixar o serviço e voltar para casa:</h3>
-                            <form class="forms">
+                            <form id='form3' class="forms">
                                 <input type="radio" name='alternativa' id="a" value=5>
                                 <label for="a">a. Deixa você com muita vontade de não precisar seguir horários, de ter tempo para fazer as coisas que você julga realmente importantes.</label><br>
                                 <input type="radio" name='alternativa' id="b" value=1>
@@ -88,7 +88,7 @@
                     </div>
 
                     <div class="button">
-                        <button class="test-button" onclick="document.write('hello')">
+                        <button class="test-button" type="submit">
                             <span>Submeter</span>
                             <i class="fas fa-arrow-right"></i>
                         </button>
@@ -103,6 +103,6 @@
         <p>Desenvolvido pela <b>COGETI</b> da UTFPR-CP</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../assets/js/script-empreendedor.js"></script>
 </body>
 </html>
