--- a/pages/empreendedor.html
+++ b/pages/empreendedor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testes de Personalidade - Empreendedorismo</title>
+    <title>Testes de Personalidade - Perfil Empreendedor</title>
 
     <link rel="stylesheet" href="../assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -45,25 +45,12 @@
 
     <main>
         <section id="home" class="hero">
-            <div class="hero-container">
-                <div class="hero-content">
-                    <div class="hero-badge">
-                        <i class="fas fa-graduation-cap"></i>
-                        <span>Disciplina: Empreendedorismo</span>
-                    </div>
-                    <h1 class="hero-title">Teste de Perfil Empreendedor</h1>
-                    <p class="hero-subtitle">Por gentileza, responda ao questionário a seguir.</p>
-                </div>
-                <div class="hero-visual">
-                    <div class="hero-card">
-                        <div class="card-icon">
-                            <i class="fas fa-chart-line"></i>
-                        </div>
-                        <h3>Questionário</h3>
-                        <p>Verifique com este teste se você tem tino empresarial.<br>Seja sincero!</p>
+                <div class="hero-container-CAES">
+                    <div class="hero-content-CAES">
+                        <h1 class="hero-title">Teste de Perfil Empreendedor</h1>
+                        <h2 class="hero-subtitle">Por gentileza, responda ao questionário a seguir.</h2>
                     </div>
                 </div>
-            </div>
         </section>
 
         <section id="testes" class="tests-section">
