--- a/pages/autoavaliacaoCAES.html
+++ b/pages/autoavaliacaoCAES.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste - Autoavaliação CAES</title>
+    <title>Testes de Personalidade - Autoavaliação CAES</title>
 
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <div class="background-animation">
@@ -51,7 +53,7 @@
                 </div>
         </section>
 
-<section id="testes" class="tests-section">
+        <section id="testes" class="tests-section">
             <div class="container">
                 <div class="section-header">
                     <h2 class="section-title">Autoavaliação das Características Empreendedoras</h2>
