--- a/pages/autoavaliacaoCAES.html
+++ b/pages/autoavaliacaoCAES.html
@@ -63,8 +63,62 @@
                     corretamente, nem mesmo é desejável que se saiba fazer tudo. </p>
                 </div>
 
-                <div class="section-header teste">
-                    
+                <div class="questionario-container">
+                    <h3>Selecione o número que corresponde à afirmação que o descreve:</h3>
+                    <div class="section-info">
+                        <ul>
+                            <li>1 = Nunca</li>
+                            <li>2 = Raramente</li>
+                            <li>3 = Algumas vezes</li>
+                            <li>4 = A maioria das vezes</li>
+                            <li>5 = Sempre</li>
+                        </ul>
+                    </div>
+
+                    <div class="questions" name="perguntas">
+                        <div class="question" name="pergunta01">
+                            <h3>1. Diante de uma ordem passada por seu chefe, patrão ou superior, qual a sua reação mais provável?</h3>
+                            <form class="forms">
+                                <input type="radio" name='alternativa' id="a" value=1>
+                                <label for="a">a. Aceita a ordem sem questioná-la.</label><br>
+                                <input type="radio" name='alternativa' id="b" value=3>
+                                <label for="b">b. Aceita e só acena depois de ser convencido de que a ordem é boa ou necessária.</label><br>
+                                <input type="radio" name='alternativa' id="c" value=5>
+                                <label for="c">c. Não aceita a ordem facilmente. Aliás, sente-se inclinado a rebelar-se contra a autoridade de quem a está passando.</label><br>
+                            </form>
+                        </div>
+
+                        <div class="question" name="pergunta02">
+                            <h3>2. Se, no trabalho ou em uma reunião social, surge uma atividade para o seu grupo fazer, qual a sua atitude mais comum?</h3>
+                            <form class="forms">
+                                <input type="radio" name='alternativa' id="a" value=1>
+                                <label for="a">a. Espera que o grupo se organize para ver a tarefa que lhe caberá realizar</label><br>
+                                <input type="radio" name='alternativa' id="b" value=5>
+                                <label for="b">b. Tem tendência de tomar a frente do grupo, propor o que deve ser feito, dividir as tarefas pelos companheiros e dar início à ação.</label><br>
+                                <input type="radio" name='alternativa' id="c" value=1>
+                                <label for="c">c. Participa das discussões mas não toma a frente do grupo, ficando sempre junto com todos, nem à frente, nem atrás.</label><br>
+                            </form>
+                        </div>
+
+                        <div class="question" name="pergunta03">
+                            <h3>3. 0 fato de ter que chegar na hora certa ao trabalho, de ter um momento determinado para almoçar e retomar ao emprego e de, ao final do expediente, ter uma hora marcada para deixar o serviço e voltar para casa:</h3>
+                            <form class="forms">
+                                <input type="radio" name='alternativa' id="a" value=5>
+                                <label for="a">a. Deixa você com muita vontade de não precisar seguir horários, de ter tempo para fazer as coisas que você julga realmente importantes.</label><br>
+                                <input type="radio" name='alternativa' id="b" value=1>
+                                <label for="b">b. Mostra a você que seguir horários é importante, que a disciplina não faz mal a ninguém e que a liberdade pessoal vem depois das regras sociais.</label><br>
+                                <input type="radio" name='alternativa' id="c" value=3>
+                                <label for="c">c. Torna claro para você que os horários marcados fazem parte do emprego e têm que ser obedecidos por quem precisa trabalhar.</label><br>
+                            </form>
+                        </div>
+                    </div>
+
+                    <div class="button">
+                        <button class="test-button" onclick="document.write('hello')">
+                            <span>Submeter</span>
+                            <i class="fas fa-arrow-right"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
         </section>
