adicionando as demais perguntas e atualizando a logica (analise dos resultados)

--- a/pages/empreendedor.html
+++ b/pages/empreendedor.html
@@ -92,6 +92,159 @@
                                         <input type="radio" name='alt3' value=3>
                                         <label for="c">c. Torna claro para você que os horários marcados fazem parte do emprego e têm que ser obedecidos por quem precisa trabalhar.</label><br>
                                 </div>
+                                <div class="question" id="q4">
+                                    <h3>4. Quando, em uma reunião de família, surge uma tarefa muito importante e as pessoas lembram de você para assumir a responsabilidade de resolvê-la, você exclama:</h3>
+                                    <input type="radio" name='alt4' value=1>
+                                    <label for="a">a. Puxa! Que lástima, essa sobrou para mim.</label><br>
+                                    <input type="radio" name='alt4' value=5>
+                                    <label for="b">b. Já sei como resolvê-la gente! Pode deixar comigo!</label><br>
+                                    <input type="radio" name='alt4' value=3>
+                                    <label for="c">c. Bem, vou fazer força para tudo dar certo</label><br>
+                                </div>
+                                <div class="question" id="q5">
+                                    <h3>5. Quando alguém pede para você ajudar a encontrar uma solução para um problema importante, qual o seu comportamento mais provável?</h3>
+                                    <input type="radio" name='alt5' value=5>
+                                    <label for="a">a. Aceita o desafio, pensa um pouco e logo imagina mais de uma forma para solucionar o problema.</label><br>
+                                    <input type="radio" name='alt5' value=3>
+                                    <label for="b">b. Pensa muito sobre o assunto, mas não consegue imaginar uma solução que valha a pena.</label><br>
+                                    <input type="radio" name='alt5' value=1>
+                                    <label for="c">c. Prefere não ajudar, pois tem horror a problemas.</label><br>
+                                </div>
+                                <div class="question" id="q6">
+                                    <h3>6. Quando uma máquina de sua casa está com defeito, qual a atitude que você, normalmente, toma?</h3>
+                                    <input type="radio" name='alt6' value=5>
+                                    <label for="a">a. Procura descobrir o defeito e encontrar uma forma de consertá-la, às vezes com arames, parafusos, borrachas, ou outras coisas que você costuma guardar para essas ocasiões.</label><br>
+                                    <input type="radio" name='alt6' value=1>
+                                    <label for="b">b. Encosta a máquina e deixa-a desligada até que um técnico venha consertá-la.</label><br>
+                                    <input type="radio" name='alt6' value=3>
+                                    <label for="c">c. Verifica se é uma coisa simples de solucionar e, se não for, chama um técnico.</label><br>
+                                </div>
+                                <div class="question" id="q7">
+                                    <h3>7. Se você fosse despedido de seu emprego e tivesse dificuldades para arranjar, imediatamente, outro trabalho na mesma área, o que você faria com maior probabilidade?</h3>
+                                    <input type="radio" name='alt7' value=1>
+                                    <label for="a">a. Aceitaria isso como uma fatalidade e aguardaria um momento mais propício para arranjar emprego.</label><br>
+                                    <input type="radio" name='alt7' value=5>
+                                    <label for="b">b. Procuraria alternativas para trabalhar e ganhar dinheiro, mesmo que não fossem, exatamente, aquilo que você costuma fazer.</label><br>
+                                    <input type="radio" name='alt7' value=3>
+                                    <label for="c">c. Continuaria procurando emprego na área em que está acostumado a trabalhar, até arranjar alguma coisa.</label><br>
+                                </div>
+                                <div class="question" id="q8">
+                                    <h3>8. Quando você pensa no que já fez em sua vida profissional, quais as lembranças que vêm mais rapidamente à sua mente?</h3>
+                                    <input type="radio" name='alt8' value=5>
+                                    <label for="a">a. Que sempre teve boas ideias, que de alguma maneira ajudaram a resolver</label><br>
+                                    <input type="radio" name='alt8' value=3>
+                                    <label for="b">b. Que algumas vezes, não muitas, teve boas ideias para melhorar o trabalho.</label><br>
+                                    <input type="radio" name='alt8' value=1>
+                                    <label for="c">c. Que nunca pensou na melhoria da organização, mas sim em cumprir suas obrigações, trabalhando com afinco.</label><br>
+                                </div>
+                                <div class="question" id="q9">
+                                    <h3>9. Se alguém lhe fizer uma proposta, como, por exemplo, utilizar um método de trabalho inovador, o que você faz com maior probabilidade?</h3>
+                                    <input type="radio" name='alt9' value=3>
+                                    <label for="a">a. Pensa na proposta, avalia os prós e os contras e, depois de muita reflexão e análise, imagina uma forma de aplicá-los aos poucos em seu trabalho.</label><br>
+                                    <input type="radio" name='alt9' value=5>
+                                    <label for="b">b. Analisa com cuidado e, se a ideia lhe parecer boa, dedica-se à sua implantação com vontade e confiança de que ela vai dar certo.</label><br>
+                                    <input type="radio" name='alt9' value=1>
+                                    <label for="c">c. Escuta e desconfia de que não pode dar certo e, assim, acha melhor continuar fazendo do jeito que sempre fez.</label><br>
+                                </div>
+                                <div class="question" id="q10">
+                                    <h3>10. Você consegue lembrar-se das vezes em que teve de enfrentar uma grande dificuldade. Nessas ocasiões, qual a atitude que mais comumente você tomou?</h3>
+                                    <input type="radio" name='alt10' value=5>
+                                    <label for="a">a. Chegou a ficar desesperado, mas conseguiu forças e lutou, lutou muito.</label><br>
+                                    <input type="radio" name='alt10' value=3>
+                                    <label for="b">b. Resistiu até onde foi possível.</label><br>
+                                    <input type="radio" name='alt10' value=1>
+                                    <label for="c">c. Pensou e chegou à conclusão de que nem sempre vale a pena lutar contra a correnteza.</label><br>
+                                </div>
+                                <div class="question" id="q11">
+                                    <h3>11. Entre seus amigos e familiares, acredita que a opinião deles à seu respeito é a de que:</h3>
+                                    <input type="radio" name='alt11' value=3>
+                                    <label for="a">a. "Você só põe o boné onde possa ganhar!" - pois quando entra em uma luta é porque tem certeza de que pode vencer.</label><br>
+                                    <input type="radio" name='alt11' value=5>
+                                    <label for="b">b. "Quando começa um projeto vai até o fim, custe o que custar" - pois você é capaz de sacrificar tudo por um objetivo.</label><br>
+                                    <input type="radio" name='alt11' value=1>
+                                    <label for="c">c. "Para você nem sempre a linha reta é o caminho" - pois você prefere contornar as dificuldades que se apresentam pela frente.</label><br>
+                                </div>
+                                <div class="question" id="q12">
+                                    <h3>12. Quando comete um erro, qual a atitude mais comum que você toma?</h3>
+                                    <input type="radio" name='alt12' value=5>
+                                    <label for="a">a. Avalia cuidadosamente o que fez, por isso não costuma repetir os mesmos erros.</label><br>
+                                    <input type="radio" name='alt12' value=3>
+                                    <label for="b">b. Pára...pensa...sacode a poeira e segue em frente, pois acha que "errar é humano".</label><br>
+                                    <input type="radio" name='alt12' value=1>
+                                    <label for="c">c. Lamenta profundamente a sua falha, pois detesta cometer erros.</label><br>
+                                </div>
+                                <div class="question" id="q13">
+                                    <h3>13. Quando lembra das vezes que surgiu uma oportunidade de fazer um bom negócio, qual foi sua reação nessas ocasiões?</h3>
+                                    <input type="radio" name='alt13' value=3>
+                                    <label for="a">a. Parou e pensou, pensou cuidadosamente nessas oportunidades e, algumas vezes, passou tanto tempo analisando a situação, que outros acabaram fazendo o negócio antes de você.</label><br>
+                                    <input type="radio" name='alt13' value=5>
+                                    <label for="b">b. Pensou um pouco, analisou cuidadosamente o negócio, e se achou viável foi em frente, com fé em Deus e confiança em si mesmo.</label><br>
+                                    <input type="radio" name='alt13' value=1>
+                                    <label for="c">c. Pensou um pouco e sempre preferiu esperar por um negócio mais seguro.</label><br>
+                                </div>
+                                <div class="question" id="q14">
+                                    <h3>14. Quando analisa a vida das pessoas que conhece, o que você mais valoriza?</h3>
+                                    <input type="radio" name='alt14' value=3>
+                                    <label for="a">a. Os amigos que vivem se arriscando, mudando de casa, de emprego, de cidade e até de país.</label><br>
+                                    <input type="radio" name='alt14' value=5>
+                                    <label for="b">b. Aqueles que conseguiram progredir, muitas vezes, enfrentando situações difíceis e arriscadas.</label><br>
+                                    <input type="radio" name='alt14' value=1>
+                                    <label for="c">c. Aquelas pessoas que souberem escolher o caminho mais seguro.</label><br>
+                                </div>
+                                <div class="question" id="q15">
+                                    <h3>15. Qual o seu conceito das pessoas que iniciaram negócios e fracassaram?</h3>
+                                    <input type="radio" name='alt15' value=5>
+                                    <label for="a">a. Elas tiveram uma oportunidade de aprender com os próprios erros e, certamente, saíram mais fortes dessas experiências.</label><br>
+                                    <input type="radio" name='alt15' value=1>
+                                    <label for="b">b. Acha que as pessoas não devem cometer erros e fracassos. Por isso, somente devem entrar em negócios seguros.</label><br>
+                                    <input type="radio" name='alt15' value=3>
+                                    <label for="c">c. As pessoas devem pensar muito antes de agir, mesmo que a oportunidade de iniciar um negócio passe. Afinal, outras oportunidades surgirão.</label><br>
+                                </div>
+                                <div class="question" id="q16">
+                                    <h3>16. Se você tivesse que iniciar um negócio, logicamente, procuraria analisar com rigor a situação e, diante dos resultados dessa análise, que atitude tomaria?</h3>
+                                    <input type="radio" name='alt16' value=1>
+                                    <label for="a">a. Só abriria a empresa se o resultado demonstrasse que o negócio tinha 100% de chance de dar certo.</label><br>
+                                    <input type="radio" name='alt16' value=5>
+                                    <label for="b">b. Apostaria na ideia, mesmo que os resultados apontassem uma certa margem de risco.</label><br>
+                                    <input type="radio" name='alt16' value=3>
+                                    <label for="c">c. Só entraria no negócio se tivesse certeza de que haveria grande chance de dar certo.</label><br>
+                                </div>
+                                <div class="question" id="q17">
+                                    <h3>17. Você costuma enfrentar uma situação difícil:</h3>
+                                    <input type="radio" name='alt17' value=5>
+                                    <label for="a">a. Com coragem, sangue-frio e força de vontade</label><br>
+                                    <input type="radio" name='alt17' value=1>
+                                    <label for="b">b. Com um certo receio, mas com fé em Deus.</label><br>
+                                    <input type="radio" name='alt17' value=3>
+                                    <label for="c">c. Com muito cuidado e, se necessário, voltando atrás para se preparar melhor.</label><br>
+                                </div>
+                                <div class="question" id="q18">
+                                    <h3>18. Que atitude você acha que combina mais com sua personalidade, quando está diante de uma oportunidade de negócio?</h3>
+                                    <input type="radio" name='alt18' value=3>
+                                    <label for="a">a. De muita calma, cuidado e sensatez.</label><br>
+                                    <input type="radio" name='alt18' value=1>
+                                    <label for="b">b. De muita fé em Deus.</label><br>
+                                    <input type="radio" name='alt18' value=5>
+                                    <label for="c">c. De confiança em sua capacidade de avaliação e de talento para superar dificuldades com "jogo de cintura" e perseverança.</label><br>
+                                </div>
+                                <div class="question" id="q19">
+                                    <h3>19. Quando lê ou assiste pela televisão alguma reportagem sobre um empresário de sucesso, qual a sua atitude mais provável?</h3>
+                                    <input type="radio" name='alt19' value=3>
+                                    <label for="a">a. Exclama: "Puxa, que sorte que ele teve!".</label><br>
+                                    <input type="radio" name='alt19' value=1>
+                                    <label for="b">b. Pensa nas dificuldades que ele enfrentou e fica satisfeito com a sua vida modesta, porém tranqüila.</label><br>
+                                    <input type="radio" name='alt19' value=5>
+                                    <label for="c">c. Enche-se de vontade e acredita que, com o mesmo esforço, vontade e confiança, seria capaz de, também, alcançar o sucesso.</label><br>
+                                </div>
+                                <div class="question" id="q20">
+                                    <h3>20. Quando a vida lhe apresenta obstáculos de difícil transposição, você:</h3>
+                                    <input type="radio" name='alt20' value=5>
+                                    <label for="a">a. Percebe que seria capaz de superar obstáculos bem mais difíceis.</label><br>
+                                    <input type="radio" name='alt20' value=1>
+                                    <label for="b">b. Sente-se acuado e pensa que a vida é um período de provações e sacrifícios.</label><br>
+                                    <input type="radio" name='alt20' value=3>
+                                    <label for="c">c. De início, sente-se atemorizado, depois acha que, com a ajuda de amigos ou familiares, pode superar os obstáculos.</label><br>
+                                </div>
 
                                 <div class="button">
                                     <button class="test-button" type="submit">
