Remoção do arquivo CSS errado

--- a/pages/autoavaliacaoCAES.html
+++ b/pages/autoavaliacaoCAES.html
@@ -127,5 +127,7 @@
     <footer class="footer">
         <p>Desenvolvido pela <b>COGETI</b> da UTFPR-CP</p>
     </footer>
+
+    <script src="../"></script>
 </body>
 </html>
