Ajuste da seção hero

--- a/pages/empreendedor.html
+++ b/pages/empreendedor.html
@@ -45,8 +45,8 @@
 
     <main>
         <section id="home" class="hero">
-                <div class="hero-container-CAES">
-                    <div class="hero-content-CAES">
+                <div class="hero-container-teste">
+                    <div class="hero-content-teste">
                         <h1 class="hero-title">Teste de Perfil Empreendedor</h1>
                         <h2 class="hero-subtitle">Por gentileza, responda ao questionário a seguir.</h2>
                     </div>
