--- a/pages/autoavaliacaoCAES.html
+++ b/pages/autoavaliacaoCAES.html
@@ -45,8 +45,8 @@
 
     <main>
         <section id="home" class="hero">
-                <div class="hero-container-CAES">
-                    <div class="hero-content-CAES">
+                <div class="hero-container-teste">
+                    <div class="hero-content-teste">
                         <h1 class="hero-title">Autoavaliação das CAES</h1>
                         <h2 class="hero-subtitle">Características empreendedoras</h2>
                     </div>
