--- a/index.html
+++ b/index.html
@@ -121,5 +121,19 @@
     </footer>
 
     <script src="script.js"></script>
+    <script>
+        const hamburger = document.querySelector(".hamburger" );
+        const navMenu = document.querySelector(".nav-menu");
+
+        hamburger.addEventListener("click", () => {
+            hamburger.classList.toggle("active");
+            navMenu.classList.toggle("active");
+        });
+
+        document.querySelectorAll(".nav-link").forEach(n => n.addEventListener("click", () => {
+            hamburger.classList.remove("active");
+            navMenu.classList.remove("active");
+        }));
+    </script>
 </body>
 </html>
